@@ -6,6 +6,7 @@
     * 4207 FIX: mk_jolokia: Use configured port as default instance name...
             NOTE: Please refer to the migration notes!
     * 4208 FIX: mk_jolokia: Plugin now works with jolokia versions requiring the base url to finish with a slash...
+    * 4174 FIX: added missing perfometer for interface services
 
     Multisite:
     * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
